--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+# IntelliJ
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+/shelf/
+/workspace.xml
